# Py.Compositio

./: .gitignore  Makefile  README.md  pyproject.toml  requirements_dev.txt
compositio/: arrows.py  combinators.py  maybe.py  result.py  result3.py  result_b.py  writer.py
test/: test_arrows.py  test_maybe.py  test_result.py  test_writer.py
