[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["compositio"]

[project]
name = "pycompositio"
version = "0.1.0"
authors = [
  { name="Victor Adan", email="vadan@netroadshow.com" },
]
description = "Functional programming in Python"
requires-python = ">=3.12"
classifiers = [ ]
dependencies = [ ]

[project.urls]
Homepage = "https://github.com/victoradan/pycompositio"
